PR_Lwip211/.metadata/.plugins/org.eclipse.cdt.ui/pr_app.build.log
22:32:59 **** Incremental Build of configuration Debug for project pr_app ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -I../../Lwip211_bsp/microblaze_0/include -I"C:\Users\HQ_home\Desktop\ICAP\PR_Lwip211\PR_Lwip211\pr_app\src" -I"C:\Users\HQ_home\Desktop\ICAP\PR_Lwip211\PR_Lwip211\pr_app\src\pr_tftp_lib" -c -fmessage-length=0 -MT"src/main.o" -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c:182:30: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 void print_app_header(struct ip_addr *TFTPServerIpAddr){
                              ^~~~~~~
In file included from ../../Lwip211_bsp/microblaze_0/include/lwip/ip_addr.h:43,
                 from ../../Lwip211_bsp/microblaze_0/include/lwip/ip.h:44,
                 from ../../Lwip211_bsp/microblaze_0/include/lwip/tcp.h:48,
                 from C:\Users\HQ_home\Desktop\ICAP\PR_Lwip211\PR_Lwip211\pr_app\src\pr_tftp_lib/pr_tftp.h:36,
                 from ../src/main.c:87:
../src/main.c: In function 'print_app_header':
../../Lwip211_bsp/microblaze_0/include/lwip/ip4_addr.h:176:65: error: dereferencing pointer to incomplete type 'struct ip_addr'
 #define ip4_addr_get_byte(ipaddr, idx) (((const u8_t*)(&(ipaddr)->addr))[idx])
                                                                 ^~
../../Lwip211_bsp/microblaze_0/include/lwip/ip4_addr.h:177:27: note: in expansion of macro 'ip4_addr_get_byte'
 #define ip4_addr1(ipaddr) ip4_addr_get_byte(ipaddr, 0)
                           ^~~~~~~~~~~~~~~~~
../src/main.c:201:38: note: in expansion of macro 'ip4_addr1'
     xil_printf("  %d.%d.%d.%d.\n\r", ip4_addr1(TFTPServerIpAddr), ip4_addr2(TFTPServerIpAddr),
                                      ^~~~~~~~~
../src/main.c: In function 'main':
../src/main.c:266:18: error: storage size of 'BoardIpAddr' isn't known
   struct ip_addr BoardIpAddr, Netmask, GatewayIpAddr, ServerIpAddr;
                  ^~~~~~~~~~~
../src/main.c:266:31: error: storage size of 'Netmask' isn't known
   struct ip_addr BoardIpAddr, Netmask, GatewayIpAddr, ServerIpAddr;
                               ^~~~~~~
../src/main.c:266:40: error: storage size of 'GatewayIpAddr' isn't known
   struct ip_addr BoardIpAddr, Netmask, GatewayIpAddr, ServerIpAddr;
                                        ^~~~~~~~~~~~~
../src/main.c:266:55: error: storage size of 'ServerIpAddr' isn't known
   struct ip_addr BoardIpAddr, Netmask, GatewayIpAddr, ServerIpAddr;
                                                       ^~~~~~~~~~~~
In file included from ../src/main.c:92:
../src/platform_config.h:5:32: error: 'XPAR_ETHERNET_BASEADDR' undeclared (first use in this function); did you mean 'XPAR_AXIETHERNET_0_BASEADDR'?
 #define PLATFORM_EMAC_BASEADDR XPAR_ETHERNET_BASEADDR
                                ^~~~~~~~~~~~~~~~~~~~~~
../src/main.c:305:38: note: in expansion of macro 'PLATFORM_EMAC_BASEADDR'
                  MacEthernetAddress, PLATFORM_EMAC_BASEADDR)) {
                                      ^~~~~~~~~~~~~~~~~~~~~~
../src/platform_config.h:5:32: note: each undeclared identifier is reported only once for each function it appears in
 #define PLATFORM_EMAC_BASEADDR XPAR_ETHERNET_BASEADDR
                                ^~~~~~~~~~~~~~~~~~~~~~
../src/main.c:305:38: note: in expansion of macro 'PLATFORM_EMAC_BASEADDR'
                  MacEthernetAddress, PLATFORM_EMAC_BASEADDR)) {
                                      ^~~~~~~~~~~~~~~~~~~~~~
../src/main.c:266:55: warning: unused variable 'ServerIpAddr' [-Wunused-variable]
   struct ip_addr BoardIpAddr, Netmask, GatewayIpAddr, ServerIpAddr;
                                                       ^~~~~~~~~~~~
../src/main.c:266:40: warning: unused variable 'GatewayIpAddr' [-Wunused-variable]
   struct ip_addr BoardIpAddr, Netmask, GatewayIpAddr, ServerIpAddr;
                                        ^~~~~~~~~~~~~
../src/main.c:266:31: warning: unused variable 'Netmask' [-Wunused-variable]
   struct ip_addr BoardIpAddr, Netmask, GatewayIpAddr, ServerIpAddr;
                               ^~~~~~~
../src/main.c:266:18: warning: unused variable 'BoardIpAddr' [-Wunused-variable]
   struct ip_addr BoardIpAddr, Netmask, GatewayIpAddr, ServerIpAddr;
                  ^~~~~~~~~~~
make: *** [src/subdir.mk:29: src/main.o] Error 1

22:33:00 Build Finished (took 320ms)

